--- a/css/css5/eco.html
+++ b/css/css5/eco.html
@@ -29,7 +29,7 @@
                         <li type="none"> <a href="#non-freshproduct"></a>Non-Fresh Product</li>
                         <li type="none"> <a href="#contact"></a>Contact</li>
                     </ul>
-                    <div class="icons">
+                    <div class="icons2">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <i class="fa-solid fa-hotdog"></i>
                     </div>
@@ -44,8 +44,8 @@
                         products, whether they come from the farthest, most distant places—or just down the road.</p>
                 </div>
                 <div class="button">
-                    <a href="">Fresh Product</a>
-                    <a href="">Non-Fresh Product</a>
+                    <a href="" style="text-decoration: none;">Fresh Product</a>
+                    <a href="" style="text-decoration: none;">Non-Fresh Product</a>
                 </div>
             </div>
         </div>
@@ -94,33 +94,32 @@
             <div class="image">
                 <div class="box">
                     <img src="http://ecoharvest.farm/img/NewCategory/rich%20may%20peach%20.png" alt="">
+                    <p>Rich May</p>
                     <div class="owerlay">
                         <div class="glass"><i class="fa-solid fa-magnifying-glass"></i></div>
+
                     </div>
                 </div>
                 <div class="box">
                     <img src="http://ecoharvest.farm/img/NewCategory/summer%20sweet%20peach.png" alt="">
+                    <p>Summer Sweat</p>
                     <div class="owerlay">
                         <div class="glass"><i class="fa-solid fa-magnifying-glass"></i></div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="http://ecoharvest.farm/img/NewCategory/white-peach%20.png" alt="">
+                    <p>White Fresh</p>
                     <div class="owerlay">
                         <div class="glass"><i class="fa-solid fa-magnifying-glass"></i></div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="http://ecoharvest.farm/img/NewCategory/peach%20flat.png" alt="">
+                    <p>Peach Flat</p>
                     <div class="owerlay">
                         <div class="glass"><i class="fa-solid fa-magnifying-glass"></i></div>
                     </div>
-                </div>
-                <div class="text2">
-                    <p>Rich May</p>
-                    <p>Summer Sweat</p>
-                    <p>White Fresh</p>
-                    <p>Peach Flat</p>
                 </div>
             </div>
             <!-- hisse4 -->
@@ -157,47 +156,95 @@
             <!-- hisse5 -->
             <div class="sort">
                 <div class="back2">
-                <h3>Sort of products</h3>
-                <div class="flex">
-                <div class="product">
-                    <span>28+</span>
-                    <p>Fruits</p>
+                    <h3>Sort of products</h3>
+                    <div class="flex">
+                        <div class="product">
+                            <span class="span-line">28+</span>
+                            <p>Fruits</p>
+                        </div>
+                        <div class="product">
+                            <span class="span-line">11+</span>
+                            <p>Vegetables</p>
+                        </div>
+                        <div class="product">
+                            <span class="span-line">13+</span>
+                            <p>Nonfresh products</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="product">
-                    <span>11+</span>
-                    <p>Vegetables</p>
+            </div>
+            <!-- /* FOOTER */ -->
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="title-col">
+                            <div class="vegetables2">
+                                <div class="card-img1">
+                                    <img src="http://ecoharvest.farm/img/1.png" alt="">
+                                </div>
+                                <div class="card-img2">
+                                    <img src="http://ecoharvest.farm/img/6.png" alt="">
+                                </div>
+                                <div class="card-img">
+                                    <img src="http://ecoharvest.farm/img/kartof.png" alt="">
+                                </div>
+                                <div class="card-img">
+                                    <img src="http://ecoharvest.farm/img/pomidor.png" alt="">
+                                </div>
+                                <div class="card-img">
+                                    <img src="http://ecoharvest.farm/img/alma.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-footer">
+                            <div class="footer">
+                                <div class="logo">
+                                    <figure>
+                                        <img src="http://ecoharvest.farm/img/logo.png" alt="">
+                                    </figure>
+                                    <ul class="social-icons">
+                                        <li class="border-icons"><i class="fa-brands fa-facebook"></i></li>
+                                        <li class="border-icons"><i class="fa-brands fa-twitter"></i></li>
+                                        <li class="border-icons"><i class="fa-brands fa-linkedin"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="col">
+                                    <h2>Quick Link</h2>
+                                    <ul>
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">About</a></li>
+                                        <li><a href="#">Contact</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="col">
+                                    <h2>Quick Link</h2>
+                                    <ul>
+                                        <li><a href="#">Fruits</a></li>
+                                        <li><a href="#">Vegetables</a></li>
+                                        <li><a href="#">Non-fresh products</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="col">
+                                    <h2>Contact Info</h2>
+                                    <ul>
+                                        <li><a href="#"><i class="fa-regular fa-envelope-open"></i> <span>
+                                                    info@ecoharvest.farm</span></a></li>
+                                        <li><a href="#"><i class="fa-solid fa-headphones-simple"></i> <span> +90 532 684
+                                                    25 07</span></a></li>
+                                        <li><a href="#"><i class="fa-solid fa-headphones-simple"></i> <span>+99 450 278
+                                                    00 27</span></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="line-footer">
+                                <span> <span class="grey">Copyright 2019</span> Crazy Innovations</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="product">
-                    <span>13+</span>
-                    <p>Nonfresh products</p>
-                </div>
-            </div>
-            </div>
-        </div>
-        <!-- hisse6 -->
-        <div class="nav">
-            <div class="flex2">
-            <div class="icon1">
-                <img src="http://ecoharvest.farm/img/1.png" alt="">
-            </div>
-            <div class="icon2">
-                <img src="http://ecoharvest.farm/img/6.png" alt="">
-            </div>
-            <div>
-                <img src="http://ecoharvest.farm/img/kartof.png" alt="">
-            </div>
-            <div>
-                <img src="http://ecoharvest.farm/img/pomidor.png" alt="">
-            </div>
-            <div>
-                <img src="http://ecoharvest.farm/img/alma.png" alt="">
-            </div>
-        </div>
-        </div>
-        <!-- hisseson -->
-        <footer>
-            
-        </footer>
+            </footer>
 </body>
 
 </html>
