--- a/css/css8/figma.html
+++ b/css/css8/figma.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="figma.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <nav>
         <img src="image2.png" alt="">
@@ -21,8 +25,27 @@
             </ul>
         </div>
         <div class="login">
-            <a href="">Login</a>
+            <a href="" style="text-decoration: none;">Login</a>
         </div>
     </nav>
+    <!-- Header -->
+    <header>
+        <div class="back">
+            <h3>Tools for Designer, Developer, and Business Owner</h3>
+            <p class="text">Information about the latest and most popular design and developer tools around the world.</p>
+            <div class="button">
+            <a href="" style="text-decoration: none;">Explore Now</a>
+        </div>
+            <div class="user">
+                <img src="Group 1451.png" alt="">
+                <p> <span>4,000+</span> User using the tools</p>
+            </div>
+            <div class="img">
+                <img src="Group 1515.png" alt="">
+            </div>
+        </div>
+
+    </header>
 </body>
+
 </html>
