--- a/css/css8/frame1.html
+++ b/css/css8/frame1.html
@@ -25,13 +25,13 @@
                     <li>NEW COMER</li>
                     <li>ABOUT</li>
                 </ul>
-                <div class="login">
+            </div>
+                <div class="loginn">
                     <a href="" style="text-decoration: none;">Login</a>
                 </div>
                 <div class="burger">
                     <i class="fa-solid fa-bars"></i>
                 </div>
-            </div>
     </div>
         <!-- Header -->
         <header>
@@ -48,9 +48,9 @@
                         <img src="Group 1451.png" alt="">
                         <p> <span>4,000+</span> User using the tools</p>
                     </div>
-                    <div class="img">
-                        <img src="Group 1515.png" alt="">
-                    </div>
+                </div>
+                <div class="img">
+                    <img src="Group 1515.png" alt="">
                 </div>
             </div>
 
