--- a/css/css8/frame1.html
+++ b/css/css8/frame1.html
@@ -49,8 +49,9 @@
                         <p> <span>4,000+</span> User using the tools</p>
                     </div>
                 </div>
-                <div class="img">
-                    <img src="Group 1515.png" alt="">
+                <div class="main-img">
+                    <div class="main-img-inner"></div>
+                    <img src="Group 1515.png" alt="" />
                 </div>
             </div>
 
