--- a/javascript/taskDom1/taskdom.html
+++ b/javascript/taskDom1/taskdom.html
@@ -106,8 +106,8 @@
   <!-- task3 -->
  
   <!-- <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Divin dizaynini deyis</p>
-  <input type="text" name="width" value="100" id="width">
-  <input type="text" name="height" id="height" value="100">
+  <input type="text" name="width" placeholder="100" id="width">
+  <input type="text" name="height" id="height" placeholder="100">
   <input type="text" name="borderWidth" id="borderWidth" value="1">
   <select name="border" id="border">
     <option name="border" id="border">Border style</option>
