--- a/javascript/taskDom1/taskdom2.html
+++ b/javascript/taskDom1/taskdom2.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <!-- DRIED FRUITS -->
-        <div class="dried fruits_img">
+        <div class="dried fr fruits_img">
             <div class="image one">
                 <div class="box one">
                     <img src="http://ecoharvest.farm/img/NewCategory/IconDried%20apricot218.jpg" alt="">
@@ -128,7 +128,7 @@
             </div>
         </div>
     <!-- DRIED VEGETABLES -->
-    <div class="dried vegetables_img">
+    <div class="dried vg vegetables_img">
         <div class="image one">
             <div class="box one">
                 <img src="http://ecoharvest.farm/img/NewCategory/Icondried%20spinach3521.jpg" alt="">
