--- a/javascript/taskDom2/taskDom01.html
+++ b/javascript/taskDom2/taskDom01.html
@@ -31,8 +31,8 @@
         <ul style="list-style-type: none;" id="listText">
         </ul>
     </div>
-    </div> -->
-<!-- </div> -->
+    </div> 
+</div> -->
 
 
 
