--- a/javascript/taskDom2/taskDom02.html
+++ b/javascript/taskDom2/taskDom02.html
@@ -29,8 +29,8 @@
         </ul>
     </div>
     <div class="arrow">
-        <i class="fa-solid fa-arrow-right righttt" onclick="next()"></i>
-        <i class="fa-solid fa-arrow-left lefttt" onclick="previous()"></i>
+        <i class="fa-solid fa-arrow-right righttt" onclick="nextnext()"></i>
+        <i class="fa-solid fa-arrow-left lefttt" onclick="previouspre()"></i>
     </div>
     <div class="container">
          <span>Gorulmus isler</span>
