--- a/javascript/taskDom2/taskDom06.html
+++ b/javascript/taskDom2/taskDom06.html
@@ -14,16 +14,16 @@
 <body>
     <div class="main">
         <div class="slide">
-            <img src="images/a.jpg" alt="" class="slideImage">
+            <img src="images/d.jpg" alt="" class="slideImage">
         </div>
         <div id="controls">
             <button id="previous"><</button>
-            <button id="next">></button>
+                    <button id="next">></button>
         </div>
         <div class="active"></div>
     </div>
-
     <script>
+
         var slides = document.querySelector('.slideImage');
         const activeDiv = document.querySelector(".active");
         const btn = document.querySelectorAll("#controls button");
